--- a/public/stylesheets/style-search.css
+++ b/public/stylesheets/style-search.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 .genres-container {
-  margin-top: 10px;
+  margin-top: 15px;
   display: flex;
   justify-content: center;
   gap: 10px;
